# mojo

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: build.rs  cli.rs  compiler.rs  config.rs  deps.rs  frameworks.rs  incremental.rs  lock.rs  main.rs  project.rs  scaffold.rs  util.rs
src/commands/: add.rs  build.rs  check.rs  clean.rs  fmt.rs  init.rs  install.rs  mod.rs  new.rs  run.rs  test.rs  tree.rs  update.rs
tests/: integration.rs
