[package]
name = "mojo"
version = "1.0.0"
edition = "2024"
description = "A build tool and package manager for C and C++ projects"
license = "MIT"
repository = "https://github.com/jspwrd/mojo"
homepage = "https://github.com/jspwrd/mojo"
keywords = ["build", "c", "cpp", "package-manager"]
categories = ["development-tools::build-utils"]
exclude = [".github", "CLAUDE.md", "AGENTS.md"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
walkdir = "2"
filetime = "0.2"
git2 = "0.19"
which = "7"
colored = "3"
num_cpus = "1"

[profile.release]
strip = true
lto = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
